chat-feature 5.5